--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,20 @@ body {
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
 
 .logo {
     margin-right: 93px;
@@ -42,7 +56,7 @@ body {
 }
 
 .conteiner {
-    width: 1230px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -50,6 +64,14 @@ body {
 /*    outline: 2px solid greenyellow;*/
 }
 
+.disp-agile {
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 /* Navigation */
 .main-nav {
     display: flex;
@@ -181,28 +203,86 @@ body {
     line-height: 1.14;
     text-align: left;
 }
-.adv-text {
-    font-size: 14px;
-    line-height: 1.7;
-    
+
+.hidden-adv {
+    display: block;
+    height: 0;
+    color: transparent;
 }
+.disp-agile .item + .item {
+    margin-left: 30px;
+}
+.adv-text {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 1.7;    
+}
+
+.work-pad {
+    padding-top: 50px;
+    justify-content: space-between;
+}
+
+
+
 /*Our work*/
 /*Our team*/
+.team-back {
+    background-color: #F5F4FA;
+}
+.disp-team {
+    padding-top: 94px;
+    
+;
+}
 .our-team {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 10px;
+
+    color: var(--primary-title-textcolor);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.19;
     text-align: center;
+
+
 }
 .job {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
 }
+.team-card {
+    padding-bottom: 30px;
+    
+    border-radius: 0px 0px 4px 4px;
+
+    background-color: var(--primary-backgroung-white);
+;
+    box-shadow: 0px 2px 1px 0px #00000033;
+    box-shadow: 0px 1px 1px 0px #00000024;
+    box-shadow: 0px 1px 3px 0px #0000001F;
+
+}
+
 
 /*Portfolio*/
 /*Portfolio-Buttons*/
+.butt-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
 .filter-button {
+    border: none;
+    border-radius: 4px;
+   /* padding-left: 22px;
+    padding-right: 22px;*/
+    padding: 6px 22px;
+
     color: var(--primary-title-textcolor);
     background-color: #F5F4FA;
 
@@ -214,6 +294,9 @@ body {
     text-align: center;
     cursor: pointer;
 }
+.filter-list:not(:last-child) {
+    margin-right: 8px;
+}
 .filter-button:hover,
 .filter-button:focus {
     color: var(--primary-backgroung-white);
@@ -224,26 +307,55 @@ body {
 }
 
 /*Portfolio-list*/
+.portfolio-core {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+}
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+
+    padding-top: 50px;
+    margin-left: -30px;
+    margin-bottom: -30px;
+
+}
+.card-set > .card-item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+.card-inner {
+    padding: 20px 24px;
+    border-right: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+}
 .portfolio-list {
+    margin-bottom: 4px;
+
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
     letter-spacing: 0.06em;
 }
-.portfolio-link {
+.portfolio-link { 
+/*   border: 1px solid #EEEEEE;*/
+   overflow: hidden; 
    text-decoration: none; 
 }
 .portfolio-text {
     color: var(--text-color);
     font-size: 16px;
-    line-height: 1.87px;
-    text-align: left;
+    line-height: 1.87;
+    text-align: left; 
 }
 
 /* Footer */
-footer {
-    background-color:#2F303A;
-}
+
 .foot-logo {
     color: var(--primary-backgroung-white);
     font-family: 'Raleway', sans-serif;
@@ -261,6 +373,23 @@ footer {
     text-align: left;
     text-decoration: none;
 }
+.foot-address:not(:last-child) {
+    margin-bottom: 12px;  
+}
+
 .foot-place {
     color: var(--primary-backgroung-white);
+}
+
+.foot-cont {
+    background-color:#2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.address-foot {
+    display: flex;
+    flex-direction: column;
+    margin-top: 28px;
+    margin-right: 0;
+    width: 231px;
 }
